Previous addition of <p> tag overwrote text-align. Added additional styles to fix this.

--- a/src/app/pages/Blog/Blog.scss
+++ b/src/app/pages/Blog/Blog.scss
@@ -78,13 +78,12 @@
         grid-template-columns: 1fr auto;
         font-weight: bold;
         font-size: 1rem;
-        color: var(--text-accent);
-        text-align: right;
         & p {
             text-align: left;
             color: var(--text-secondary);
             &.value{
                 color: var(--text-accent);
+                text-align: right;
             }
         }
     }
